save encrypted data to firestore and decrypted data on app

--- a/app/src/main/res/layout/activity_credential_form.xml
+++ b/app/src/main/res/layout/activity_credential_form.xml
@@ -1,9 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     tools:context=".credentialForm">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/outputTv1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="131dp"
+        style="@style/TextAppearance.MaterialComponents.Headline6"/>
+
+
+
+
+    <TextView
+        android:id="@+id/textView6"
+        style="@style/TextAppearance.MaterialComponents.Headline4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Credentials Form" />
+
+
+    <TextView
+        android:id="@+id/encodeddecoded"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/outputTv1"
+        android:layout_marginTop="19dp"
+        android:text="Encoded and Decoded Data" />
+
+    <TextView
+        android:id="@+id/TvOutputofshowbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/encodeddecoded"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
+        />
+
+
+</RelativeLayout>
