updated save encrypted data to firestore and decrypted data on app

--- a/app/src/main/res/layout/activity_credential_form.xml
+++ b/app/src/main/res/layout/activity_credential_form.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/outputTv1"
         android:layout_marginTop="19dp"
-        android:text="Encoded and Decoded Data" />
+        android:text="Decoded Data" />
 
     <TextView
         android:id="@+id/TvOutputofshowbtn"
